add validation by joi
