# src/controllers/ProductController.js
@@ -5,14 +5,13 @@ class ProductController {
 
   createNewProduct = async (req, res, next) => {
     const product = await this.productService.createNewProduct(req.body);
-    req.product = product;
+    req.newEntity = product;
     res.status(201).json(product);
     next();
   };
 
   deleteProduct = async (req, res, next) => {
     await this.productService.deleteProduct(req.params.id);
-    req.idForMiddleware = req.params.id;
     res.status(200).json({ status: 'deleted' });
     next();
   };
@@ -28,8 +27,10 @@ class ProductController {
   };
 
   updateProduct = async (req, res, next) => {
-    const product = await this.productService.updateProduct(req.params.id, req.body);
-    req.idForMiddleware = req.params.id;
+    const product = await this.productService.updateProduct(
+      req.params.id,
+      req.body
+    );
     res.status(200).json(product);
     next();
   };
