# src/routes/category.js
@@ -1,17 +1,17 @@
 const { Router } = require('express');
-require('express-async-errors');
 const categoryController = require('../container/Category');
-
+const { categoryPOST, categoryPUT, paramID } = require('../middlewares/shemas');
+const validation = require('../middlewares/validation');
 const router = Router();
 
 router.get('/', categoryController.getAllCategory);
 
-router.get('/:id', categoryController.getCategoryById);
+router.get('/:id', validation(paramID, 'params'), categoryController.getCategoryById);
 
-router.post('/', categoryController.createNewCategory);
+router.post('/', validation(categoryPOST, 'body'), categoryController.createNewCategory);
 
-router.put('/:id', categoryController.updateCategory);
+router.put('/:id', validation(paramID, 'params'), validation(categoryPUT, 'body'), categoryController.updateCategory);
 
-router.delete('/:id', categoryController.deleteCategory);
+router.delete('/:id', validation(paramID, 'params'), categoryController.deleteCategory);
 
 module.exports = router;
